<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ListView android:id="@id/t_list" android:background="@drawable/t_list_bg" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:visibility="invisible" android:scrollbars="none" android:fadingEdge="none" android:layout_width="726.0dip" android:layout_height="351.0dip" android:listSelector="@*android:color/transparent" android:cacheColorHint="@*android:color/transparent" android:divider="@drawable/t_list_divider" android:dividerHeight="2.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        <LinearLayout android:gravity="center_horizontal" android:id="@id/tr_a2dp" android:background="@drawable/tr_a2dp_bg" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <ImageView android:id="@id/prev" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="55.0dip" android:layout_marginRight="18.0dip" android:src="@drawable/prev" android:scaleType="center" android:onClick="onClick" />
            <ImageView android:id="@id/pp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="55.0dip" android:layout_marginRight="18.0dip" android:src="@drawable/pp" android:scaleType="center" android:onClick="onClick" />
            <ImageView android:id="@id/next" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="55.0dip" android:layout_marginRight="18.0dip" android:src="@drawable/next" android:scaleType="center" android:onClick="onClick" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:id="@id/t_normal" android:layout_width="fill_parent" android:layout_height="351.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="177.0dip" android:layout_height="fill_parent" android:layout_marginRight="5.0dip">
                <ImageView android:id="@id/tl_0" android:background="@drawable/tr_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:scaleType="center" android:onClick="onTlClick" />
                <ImageView android:id="@id/tl_1" android:background="@drawable/tr_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:scaleType="center" android:onClick="onTlClick" />
                <ImageView android:id="@id/tl_2" android:background="@drawable/tr_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:scaleType="center" android:onClick="onTlClick" />
                <ImageView android:id="@id/tl_3" android:background="@drawable/tr_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:scaleType="center" android:onClick="onTlClick" />
            </LinearLayout>
            <RelativeLayout android:layout_width="538.0dip" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip">
                <RelativeLayout android:gravity="center_horizontal" android:id="@id/tr_list_bg" android:background="@drawable/tr_pb_bg" android:visibility="invisible" android:layout_width="538.0dip" android:layout_height="351.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <EditText android:gravity="center" android:id="@id/tr_edit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="-8.0dip" android:singleLine="true" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:inputType="text" android:imeOptions="actionDone" />
                    <ListView android:id="@id/tr_list" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:scrollbars="none" android:fadingEdge="none" android:layout_width="538.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:listSelector="@*android:color/transparent" android:cacheColorHint="@*android:color/transparent" android:divider="@drawable/tr_list_divider" android:dividerHeight="2.0dip" android:layout_below="@id/tr_edit" android:layout_centerInParent="true" android:layout_alignWithParentIfMissing="true" />
                    <ProgressBar android:id="@id/tr_progress" android:visibility="invisible" android:layout_width="67.0dip" android:layout_height="67.0dip" android:layout_marginBottom="4.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="?android:attr/progressBarStyleLarge" />
                </RelativeLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/tr_dial" android:background="@drawable/tr_d_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                    <LinearLayout android:layout_width="fill_parent" android:layout_height="72.0dip">
                        <TextView android:textSize="30.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:id="@id/digit" android:layout_width="446.0dip" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" />
                        <ImageView android:id="@id/delete" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="4.0dip" android:layout_marginRight="4.0dip" android:src="@drawable/delete" android:scaleType="center" android:onClick="onClick" />
                    </LinearLayout>
                    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TableRow android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_1" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_2" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_3" android:onClick="onDClick" />
                        </TableRow>
                        <TableRow android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_4" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_5" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_6" android:onClick="onDClick" />
                        </TableRow>
                        <TableRow android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_7" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_8" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_9" android:onClick="onDClick" />
                        </TableRow>
                        <TableRow android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip">
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_x0" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:id="@id/digit_0" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_0" android:onClick="onDClick" />
                            <TextView android:textSize="40.0dip" android:textStyle="normal" android:textColor="#ffebebeb" android:gravity="center" android:background="@drawable/tr_c_d_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/digit_x1" android:onClick="onDClick" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip">
        <ImageView android:id="@id/home" android:background="@drawable/b_hb_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:src="@drawable/home" android:scaleType="center" android:onClick="onClick" />
        <LinearLayout android:gravity="center" android:background="@drawable/b_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
            <ImageView android:id="@id/dial" android:background="@drawable/b_l_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/dial" android:scaleType="center" android:onClick="onBClick" />
            <ImageView android:id="@id/calllog" android:background="@drawable/b_c_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/calllog" android:scaleType="center" android:onClick="onBClick" />
            <ImageView android:id="@id/phonebook" android:background="@drawable/b_c_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/phonebook" android:scaleType="center" android:onClick="onBClick" />
            <ImageView android:id="@id/a2dp" android:background="@drawable/b_c_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/a2dp" android:scaleType="center" android:onClick="onBClick" />
            <ImageView android:id="@id/pair" android:background="@drawable/b_c_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/pair" android:scaleType="center" android:onClick="onBClick" />
            <ImageView android:id="@id/setting" android:background="@drawable/b_r_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/setting" android:scaleType="center" android:onClick="onBClick" />
        </LinearLayout>
        <ImageView android:id="@id/back" android:background="@drawable/b_hb_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:src="@drawable/back" android:scaleType="center" android:onClick="onClick" />
    </LinearLayout>
</LinearLayout>